Fixed grid overflows

--- a/designs.css
+++ b/designs.css
@@ -1,7 +1,16 @@
-/* .users-container {
+html,
+body,
+.users-container {
+  margin: 0;
   width: 0 !important;
-  background-color: aquamarine;
-} */
+  background-color: rgb(43, 63, 56);
+}
+
+.users-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-end: 400px !important;
+}
 
 /* .user-card:hover {
   transform: scale(1.15);
@@ -29,6 +38,9 @@
 .rotate-right:nth-child(4):hover {
   transform: scale(1.15) rotate(10deg);
 } */
+
+#user-template {
+}
 
 .user-card:hover {
   transform: scale(1.15);
